# CALCULUM_ROMANUM

./: .eslintrc.json  .gitignore  INSTALLATION.md  README.md  chat.txt  chat_optimiert.txt  index.html  package-lock.json  package.json  playwright.config.ts  tauri.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts
.prompts/: project-info.prompttemplate
.prompts/task-contexts/: Architekturkonzept-Klärungsfrage.md
scripts/: wait-for-server.js
spezifikation/: Prompt_Architekturkonzept.md
spezifikation/review/: review_01.md  review_02.md
spezifikation/ui/: 01_ueberblick.md  02_wireframes.md  03_design_system.md  04_fehlerbehandlung.md  05_implementation_roadmap.md
spezifikation/userStories/: 01_grundlegende_eingabe.md  02_auswahl_rechenart.md  03_durchfuehrung_berechnung.md  04_loeschen_eingabe.md  05_anzeige_rechenweg.md  06_fenster_ui_design.md  07_historie_berechnungen.md  review.md  userStories.md
src-tauri/: Cargo.toml  tauri.conf.json
src/common/: constants.ts  index.ts
src/renderer/: App.tsx  index.html  main.tsx
src/renderer/components/: CalculateButton.tsx  ClearButtons.tsx  FormulaDisplay.tsx  HistoryPanel.tsx  InputField.tsx  NumberButtons.tsx  OperationSelector.tsx  index.ts
src/renderer/constants/: latinTexts.ts
tests/e2e/: README.md  accessibility.spec.ts  integration.spec.ts  performance.spec.ts  us01_grundlegende_eingabe.spec.ts  us02_auswahl_rechenart.spec.ts  us03_durchfuehrung_berechnung.spec.ts  us04_loeschen_eingabe.spec.ts  us05_anzeige_rechenweg.spec.ts  us06_fenster_ui_design.spec.ts  us07_historie_berechnungen.spec.ts
(+19 files in other folders)
