[package]
name = "calculum-romanum"
version = "1.0.0"
description = "Ein römischer Taschenrechner als Desktop-Anwendung"
authors = ["Calculum Romanum Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
